--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
-  <title>Ciao mondo</title>
+  <meta charset="UTF-8">
+  <title>Posizione</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: Arial;
+      text-align: center;
+      padding-top: 50px;
+    }
+    button {
+      font-size: 18px;
+      padding: 10px 20px;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Ciao mondo</h1>
+  <h1>La mia posizione</h1>
+
+  <button onclick="mostraPosizione()">Mostra posizione</button>
+
+  <p id="risultato"></p>
+
+  <script>
+    function mostraPosizione() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(
+          function(posizione) {
+            document.getElementById("risultato").innerHTML =
+              "Latitudine: " + posizione.coords.latitude +
+              "<br>Longitudine: " + posizione.coords.longitude;
+          },
+          function() {
+            document.getElementById("risultato").innerHTML =
+              "Permesso negato o errore";
+          }
+        );
+      } else {
+        document.getElementById("risultato").innerHTML =
+          "Geolocalizzazione non supportata";
+      }
+    }
+  </script>
 </body>
 </html>
